@@ -57,6 +57,7 @@ bugfix:
 - fix class App-stroe - Application-group members are imported now
 - fix class-PanAPIConnector.php - introcude M-200 and M-600 devices
 - fix trait-AddressCommon.php method __removeWhereIamUsed - for address-edit actions=decommission
+- fix class-Rule / class-AuthenticationRule - filter-rule | missing stuff for new class-Authentication
 
 
 1.5.13
